--- a/Projekt-kino.csproj
+++ b/Projekt-kino.csproj
@@ -13,4 +13,8 @@
     <Folder Include="SQL\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+  </ItemGroup>
+
 </Project>
